Strict test reflection